# llm-chat

./: .env.example  .gitignore  Dockerfile  README.md  app.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
configs/: train_arxiv_small.sh
docs/goals/llm-chat/: goal.md  state.yaml
model/: __init__.py  data.py  eval.py  load_gpt2.py  synthetic_data.py  tokenizer.py  train.py  transformer.py
scripts/: train_e2e.sh
static/css/: main.css
static/js/: main.js
templates/: index.html
tests/: conftest.py  test_app.py  test_data.py  test_tokenizer.py  test_training.py  test_transformer.py
