[project]
name = "llm-chat"
version = "1.0.0"
description = "Streaming LLM chat — GPT-2 from scratch, FastAPI, HF Spaces"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "tiktoken>=0.7",
    "transformers>=4.40,<5.0",
    "torch>=2.2",
    "python-dotenv>=1.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28",
    "mypy>=1.10",
    "pytest>=9.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.5",
]

[tool.pytest.ini_options]
asyncio_mode = "strict"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
